// TEAM: perseus

syntax = "proto3";

package flexport.airshippingdoc.datafetcher.v1beta1;

import "google/protobuf/wrappers.proto";

option java_multiple_files = true;
option java_outer_classname = "DataFetcherApiProto";
option java_package = "com.flexport.airshippingdoc.datafetcher.v1beta1";
option ruby_package = "Flexport::AirShippingDoc::DataFetcher::V1Beta1";

service DataFetcherAPI {
  rpc FetchData(FetchDataRequest) returns (FetchDataResponse);
}

message FetchDataRequest {
  string method_name = 1;
  repeated Argument args = 2;
}

message Argument {
  oneof arg {
    StringArgument string_arg = 1;
    Int32Argument int32_arg = 2;
    Int64Argument int64_arg = 3;
    StringArrayArgument string_array_arg = 4;
    Int32ArrayArgument int32_array_arg = 5;
    Int64ArrayArgument int64_array_arg = 6;
  }
}

message StringArgument {
  string value = 1;
}

message Int32Argument {
  int32 value = 1;
}

message Int64Argument {
  int64 value = 1;
}

message StringArrayArgument {
  repeated string value = 1;
}

message Int32ArrayArgument {
  repeated int32 value = 1;
}

message Int64ArrayArgument {
  repeated int64 value = 1;
}

message FetchDataResponse {
  google.protobuf.StringValue data = 1;
}
