// TEAM: customs_platform

syntax = "proto3";

package flexport.customs.usadapter.isf.v1;

import "flexport/customs/usadapter/isf/v1/isf_request_delete.proto";
import "flexport/customs/usadapter/isf/v1/isf_request_transmit.proto";

option java_multiple_files = true;
option java_package = "com.flexport.customs.usadapter.isf.v1";
option ruby_package = "Flexport::Customs::UsAdapter::Isf::V1";

message IsfRequest {
  oneof request_type {
    flexport.customs.usadapter.isf.v1.DeleteIsfRequest request_delete = 1;
    flexport.customs.usadapter.isf.v1.TransmitIsfRequest request_transmit = 2;
  }
}
