// TEAM: service_platform

syntax = "proto3";

package flexport.eventlog.heartbeat.v1beta1;

option java_multiple_files = true;
option java_outer_classname = "HeartbeatProto";
option java_package = "com.flexport.eventlog.heartbeat.v1beta1";
option ruby_package = "Flexport::EventLog::Heartbeat::V1Beta1";

// Producing heartbeat events in service outboxes to ensure the replication slot
// is up to date.
message Heartbeat {
  // The service that generates the heartbeat
  string service_name = 1;
}
